# vicepython-core

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: getting-started.md
docs/explanation/: omissions.md  stability.md
docs/how-to/: boundary-conversion.md  chaining.md  collecting.md  pattern-matching-best-practices.md
docs/reference/: api.md
src/vicepython_core/: __init__.py  option.py  result.py  types.py
tests/: test_option.py  test_result.py  test_smoke.py  test_types.py
tools/: check
